chapter5/network-policies/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
  namespace: ns1
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: http
  selector:
    app: hello-world
  type: ClusterIP
