chapter5/network-policies/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: ns1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowsome-ingress
  namespace: ns1
spec:
  podSelector:
    matchLabels:
      app: hello-world
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: debug
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values: ["ns2"]
